# The-Toob

./: .gitignore  LICENSE  README.md  bruh.txt  environment.yml  pyproject.toml  requirements.txt
tests/: test_integration.py  test_toob_browser.py  test_uploader.py  test_uploader_page.py
the_toob/: Constant.py  ToobBrowser.py  Uploader.py  UploaderPage.py  __init__.py  __main__.py
the_toob.egg-info/: PKG-INFO
